# maltilex

api/: Cargo.toml
api/src/: db.rs  main.rs  root.txt  search.rs  utils.rs  word.rs
app/: package-lock.json  package.json  tailwind.config.ts
app/src/: app.html
app/src/lib/: api.ts  filter.svelte  filter.ts  loading.svelte  nav.svelte  search-bar-main.svelte  search-bar.svelte  search-entry.svelte  search-types.ts  utils.ts  word.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/about/: +page.svelte
app/src/routes/api/: +server.ts
app/src/routes/search/: +page.server.ts  (+2 more)
common/: index.ts
db/: README.md
db/helper/: Cargo.toml  Makefile
db/helper/src/: main.rs
db/words/: arja.json  art.json  bidla.json  bieb.json  bniedem.json  edukazzjoni.json  filgħodu.json  forza.json  għajn.json  għalliem.json  il.json  jien.json  karta.json  ktieb.json  l-istorja.json  mara.json  mejda.json  mhux.json  mnieħer.json  mument.json  nista'.json  offiċċju.json  parti.json  persuna.json  raġel.json  raġuni.json  resżultat.json  saħħa.json  saħħa1.json  tifel.json  widna.json  wiċċ.json  ċaw.json  ġenitur.json  ħalq.json
dev/: .prettierignore  .prettierrc  package-lock.json  package.json  tailwind.config.ts
dev/src/: app.d.ts  hooks.server.ts
dev/src/lib/: add-entry.svelte  api.ts  check-editor.svelte  common  form-editor.svelte  list-editor.svelte  nav.svelte  req-types.ts  req.ts  str-editor.svelte  tags-editor.svelte  utils.ts  word-editor.svelte
dev/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
(+40 files in other folders)
