[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
futures = "0.3.31"
indicatif = "0.17.9"
lazy_static = "1.5.0"
levenshtein = "1.0.5"
mongodb = "3.1.1"
postgrest = "1.6.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"
uuid = "1.11.1"
